# poetry-plugin-devbox

./: README.md  devbox.json  flake.nix  pyproject.toml
poetry/: flake.nix  result
